Sat Feb 23 16:51:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* thread.c: Documentation for Thread#backtrace_locations
	  [Backport #7932]

Sat Feb 23 16:05:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* vm.c: Typo in ObjectSpace::WeakMap overview [Backport #7933]

Sat Feb 23 16:00:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* thread.c: Improved rdoc for ::handle_interrupt, ::pending_interrupt?
	  and #pending_interrupt? [Backport #7934]

Sat Feb 23 14:19:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (HAVE_RB_SCAN_ARGS_OPTIONAL_HASH): for
	  rb_scan_args() optional hash feature.  [Bug #7861]

Sat Feb 23 13:03:22 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb (IPAddr#in6_addr): Fix a typo with the closing
	  parenthesis.

Sat Feb 23 13:03:22 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb (IPAddr#in6_addr): Fix the parser so that it can
	  recognize IPv6 addresses with only one edge 16-bit piece
	  compressed, like [::2:3:4:5:6:7:8] or [1:2:3:4:5:6:7::].
	  [Bug #7477]

Sat Feb 23 13:00:49 2013  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in (LIBRUBY_DLDFLAGS): Fix a bug where --with-opt-dir
	  options given were not reflected to LIBRUBY_DLDFLAGS on many
	  platforms including Linux and other GNU-based systems, NetBSD,
	  AIX and BeOS.

Sat Feb 23 13:00:07 2013  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix a bug introduced in r38342 that the cflagspat
	  substitution is messed up by the way CFLAGS and optflags are
	  modified, which affected FreeBSD and NetBSD/amd64 when
	  configured to use libexecinfo.  This bug resulted in CFLAGS and
	  CXXFLAGS in RbConfig::CONFIG having warnflags expanded in them,
	  forcing third-party C/C++ extensions to follow what warnflags
	  demands, like ANSI/ISO-C90 conformance.  ref [Bug #7101]

Sat Feb 23 12:58:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb: remove extra topdir in VPATH, which was in