@@ -1,3 +1,8 @@
+Tue Feb 19 12:30:00 2013  Zachary Scott  <zachary@zacharyscott.net>
+
+	* object.c: rdoc formatting for Kernel#Array() [Backport #7931]
+	* array.c: Add rdoc for Array() method to Creating Arrays section
+
 Sat Feb 23 16:51:00 2013  Zachary Scott  <zachary@zacharyscott.net>
 
 	* thread.c: Documentation for Thread#backtrace_locations
